# Simple-API-Actix

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build_and_push.yml
src/: main.rs
